[tool.poetry]
name = "attendance"
version = "0.0.1"
description = "Esse3 utility for exam dates and booking"
authors = ["Francesco Pacenza <francescopacenza93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dateutils = "^0.6.12"
typer = "^0.7.0"
rich = "^13.3.1"

[tool.poetry.dev-dependencies]
coverage = "^7.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
